--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
         <span>H</span>
         <span>A</span>
         <span>L</span>
-        <span>L</span>
-        <span>O</span>
+        <span>O</span><br>
+        
+        <span>Z</span>
+        <span>U</span>
+        <span>R</span>
+        <span>A</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Selamat Ulang Tahun Ya Cantikk wkwk <br>
+            Gabisa Ngasi Apa" Cuma Bisa Buat Kekgini Doang Woii wkwkw, Semoga Panjang Umur Sehat Selalu Semangat Kuliahnya Yaa wkwk<br>
+            Wish You All The Best Pokoknya</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">Klik Dulu Aku Bisa Sulap:v</a>
         </button>
         
     </div>
