--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>O</span><br>
+        <span>B</span>
+        <span>D</span><br>
         
         <span>Z</span>
         <span>U</span>
         <span>R</span>
         <span>A</span>
+        <span>A</span><br>
     </div>
     <div class="description">
-        <span>Selamat Ulang Tahun Ya Cantikk wkwk <br>
-            Gabisa Ngasi Apa" Cuma Bisa Buat Kekgini Doang Woii wkwkw, Semoga Panjang Umur Sehat Selalu Semangat Kuliahnya Yaa wkwk<br>
+        <span style="text-align:center">Selamat Ulang Tahun Ya Cantikk wkwk <br><br>
+            Gabisa Ngasi Apa" Cuma Bisa Buat Kekgini Doang Woii wkwkw, Semoga Panjang Umur Sehat Selalu Semangat Kuliahnya Yaa wkwk<br><br>
             Wish You All The Best Pokoknya</span>
     </div>
     <div class="button">
