--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="description">
         <span style="text-align:center">Selamat Ulang Tahun Ya Cantikk wkwk <br><br>
-            Gabisa Ngasi Apa" Cuma Bisa Buat Kekgini Doang Woii wkwkw, Semoga Panjang Umur Sehat Selalu Semangat Kuliahnya Yaa wkwk<br><br>
+            Gabisa Ngasi Apa" Cuma Bisa Buat Kekgini Doang Woii wkwkw, Semoga Panjang Umur Sehat Selalu, Semangat Kuliahnya Yaa wkwk<br><br>
             Wish You All The Best Pokoknya</span>
     </div>
     <div class="button">
