--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <span>A</span><br>
     </div>
     <div class="description">
-        <span style="text-align:center">Selamat Ulang Tahun Ya Cantikk wkwk <br><br>
+        <span><p style="text-align:center">Selamat Ulang Tahun Ya Cantikk wkwk <br><br>
             Gabisa Ngasi Apa" Cuma Bisa Buat Kekgini Doang Woii wkwkw, Semoga Panjang Umur Sehat Selalu, Semangat Kuliahnya Yaa wkwk<br><br>
-            Wish You All The Best Pokoknya</span>
+            Wish You All The Best Pokoknya</p></span>
     </div>
     <div class="button">
         <button>
