--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>B</span>
-        <span>D</span><br>
+        <span>D  </span>
         <span>Z</span>
         <span>U</span>
         <span>R</span>
