--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>B</span>
-        <span>D  </span>
-        <span>  Z</span>
+        <span>D&ensp;</span>
+        <span>Z</span>
         <span>U</span>
         <span>R</span>
         <span>A</span>
